some changes to indez

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="js/system.js"></script>
 	</head>
 	<body>
-		<div id="container" style = "width: 1366">
+		<div id="container" width = "1366">
 			<span id = "homePage">
 				<span id = "engiLogo"><img id="engiImg" src="loading.gif"/></span>
 				<!--<span id = "menu0"><img id="mmm0" src="loading.gif"/></span>
